By default, this new system makes a lot of database queries. If your database 
is particularly slow, or if your system administrator limits your query count, 
or if you want to squeeze as much performance as possible out of Mediawiki, 
set $wgCacheDirectory to a writable path on the local filesystem. Make sure 
you have the DBA extension for PHP installed, this will improve performance 
further.

== Changes since 1.16 beta 2 ==

* Fixed bugs in the [[Special:Userlogin]] and [[Special:Emailuser]] handling of
  invalid usernames.
* Fixed sorting in [[Special:Allmessages]]
* (bug 23113) Fixed title in the show/hide links on diff pages
* (bug 23117) Fixed API rollback, was returning "badtoken" for valid requests
* (bug 23127) Re-added missing $1 parameter to the uploadtext message
* Fixed a bug in the Vector skin where personal tools display behind the logo
* (bug 23139) Fixed a bug in edit conflict resolution, where both textboxes 
  showed the same text.
* (bug 23115, bug 23124) Fixed various problems with <title> and <h1> elements
  in page views and previews when the language converter is enabled.
* (bug 23148) Fixed a local path disclosure vulnerability in ImageMagick image
  scaling, which was introduced in 1.16 beta 1. 
* Improved error checking on installer.
* (bug 22970) Fixed a JavaScript error in the upload destination conflict 
  check.
* (bug 23167) Check the watch checkbox by default if the watchcreations 
  preference is set.

=== Changes since 1.16 beta 1 ===

* Fixed errors in maintenance/patchSql.php
* (bug 19627) Fix regression from r57867 where HTMLForm would output 
  <element classes="foo bar"> rather than <element class="foo bar">
* Fixed broken "-r" option to maintenance/lag.php
* (bug 23076) Fixed login CSRF vulnerability. Logins now require a token to 
  be submitted along with the user name and password.

=== Configuration changes in 1.16 ===

* (bug 18222) $wgMinimalPasswordLength default is now 1